# ml-zoomcamp

./: README.md  pyproject.toml
W1/: 01_homework.ipynb
W2/: 02_homework.ipynb
W4/: 04_homework.ipynb
W5/: 05_homework.ipynb
W6/: 06_homework.ipynb
