[tool.poetry]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Jirapat Intaaue <156293220+omjirapat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
numpy = "^2.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
